[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypglab"
version = "2023.0.1"
authors = [{ name="Pierluigi Garaventa", email="pglab.electronics@gmail.com" }]
description = "Library for PGLab smart home devices."
keywords = ["pglab"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pglab-electronics/pypglab"